--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Insects -- Collection and preservation'
 - !lcc 'QL'
+- GITenberg
 title: Directions for Collecting and Preserving Insects
 url: http://www.gutenberg.org/ebooks/39275
